<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_login"
                style="@style/actionbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                app:navigationIcon="@drawable/ic_arrow_left"
                app:title="@string/activity_login_toolbar_title" />

        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/image_view_login_logo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_48"
            android:layout_marginTop="@dimen/margin_64"
            android:layout_marginEnd="@dimen/margin_48"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_butterfly"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar_login" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_login_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_48"
            android:layout_marginTop="@dimen/margin_96"
            android:layout_marginEnd="@dimen/margin_48"
            android:hint="@string/activity_login_email_hint"
            app:boxBackgroundColor="@color/blue_title_20"
            app:boxStrokeColor="@color/blue_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_login_logo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_login_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_48"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_48"
            android:hint="@string/activity_login_password_hint"
            app:boxBackgroundColor="@color/blue_title_20"
            app:boxStrokeColor="@color/blue_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_login_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_view_login_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_48"
            android:text="@string/activity_login_forget_password"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_login_password" />

        <Button
            android:id="@+id/button_login_sign_in"
            style="@style/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_96"
            android:layout_marginTop="@dimen/margin_36"
            android:layout_marginEnd="@dimen/margin_96"
            android:layout_marginBottom="@dimen/margin_24"
            android:text="@string/activity_onboard_login_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_login_forget_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
